# vak

./: .all-contributorsrc  .gitignore  .readthedocs.yaml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  README.md  README_cnnbilstm_package.md  README_config.md  README_summary.md  SECURITY.md  SummaryByFile.py  SummaryByFile_model.py  bidirectional_LSTM_with_cost.ipynb  bidirectional_LSTM_with_cost_batch.ipynb  bidirectional_LSTM_with_cost_batch_CNN.ipynb  environment.yml  experiments.md  learn_curve.py  learn_curve_with_CNNBiLSTM_class.py  load_mat_spects.py  main.py  make_data.py  noxfile.py  pyproject.toml  setup.py  spec-file.txt  summary.py  summary_with_CNNBiLSTM_class.py  template_config.ini  template_config_matlab_spectrograms.ini  test-lightning-loss-tweetynet.ipynb  test_vae.ipynb  tests.py  train-ava.ipynb  ubuntu-laptop-spec-file.txt
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci.yml
.ipynb_checkpoints/: bidirectional_LSTM_with_cost-checkpoint.ipynb  bidirectional_LSTM_with_cost_batch-checkpoint.ipynb  bidirectional_LSTM_with_cost_batch_CNN-checkpoint.ipynb
.make/: venv.Makefile
article/configs/: config_2018-10-09_bl26lb16_GPU1.ini  config_2018-10-09_or60yw70_GPU0.ini  config_list_bf_song_repository_all.txt
article/notebooks/: koumura-learn-curve.ipynb
cnn_bilstm/: __init__.py  curvefit.py  evfuncs.py  graphs.py  koumura_utils.py  mat_utils.py  metrics.py  model.py  spect_utils.py  utils.py
cnn_bilstm/train_utils/: __init__.py  learningcurve.py  make_data.py  train.py
conda.recipe/: meta.yaml
configs/: config_2018-10-09_gr41rd51_GPU0.ini  config_2018-10-09_gy6or6_GPU1.ini
doc/: CHANGELOG.md  README_config.md  conf.py  experiments.md  faq.md  index.md  index.rst  poem.md  template_config_matlab_spectrograms.ini  template_learncurve_config.ini  template_user_config.ini
doc/_templates/: class.rst  module.rst
doc/api/: index.rst
doc/development/: commit-abbreviations.rst  contributors.md  contributors.rst  index.md  index.rst
doc/discussion/: discussion.rst
doc/get_started/: autoannotate.md  autoannotate.rst  get_started.rst  index.md  index.rst  installation.md  installation.rst
doc/howto/: howto.rst  howto_prep_annotate.md  howto_user_annot.md  howto_user_annot.rst  howto_user_spect.md  howto_user_spect.rst  index.md  index.rst
doc/ini/: gy6or6_predict.ini  gy6or6_train.ini
doc/notebooks/: rerun-test.ipynb  rerun-test.py
doc/poems/: index.md  index.rst  poems.rst  the-bird-may-die.rst  unknown-bird.rst  what-does-the-bird-care.rst
doc/reference/: about.md  about.rst  cli.md  cli.rst  config.md  config.rst  filenames.md  index.md  index.rst  models.md  reference.rst  spect_file_format.md  spect_file_format.rst
doc/toml/: gy6or6_eval.toml  gy6or6_predict.toml  gy6or6_train.toml  gy6or6_train_better.toml
doc/tutorial/: autoannotate.rst  tutorial.rst
old versions/: bidirectional_LSTM_with_cost.ipynb  bidirectional_LSTM_with_cost_batch.ipynb  bidirectional_LSTM_with_cost_batch.py  bidirectional_LSTM_with_cost_batch_CNN.py  segment_test_data.py
src/cnn_bilstm/: __init__.py  __main__.py  graphs.py  utils.py
src/notebooks/: bidirectional_LSTM_with_cost_batch_CNN.ipynb
src/scripts/: download_autoannoate_data.py  download_autoannotate_data.py  test_vae.ipynb
src/songdeck/: __init__.py  __main__.py  evfuncs.py  mat_utils.py  network.py
src/tweetynet/: __init__.py  __main__.py  model.py
src/vak/: __about__.py  __init__.py  __main__.py  annotation.py  constants.py  converters.py  csv.py  device.py  entry_points.py  evfuncs.py  labeled_timebins.py  labels.py  logging.py  network.py  paths.py  spect.py  summary_writer.py  tensorboard.py  timebins.py  timenow.py  trainer.py  validators.py
tests/: __init__.py  conftest.py  test___main__.py  test_annot.py  test_annotation.py  test_console_script.py  test_converters.py  test_csv.py  test_labeled_timebins.py  test_labels.py  test_paths.py  test_tensorboard.py  test_timebins.py  test_utils.py  vak.tests.config.json  vak.tests.config.toml
tests/fixtures/: __init__.py  annot.py  audio.py  config.py  csv.py  das.py  dataframe.py  dataset.py  device.py  model.py  parser.py  path.py  results.py  source_files.py  spect.py  split.py  tensorboard.py  test_data.py  torch.py  trainer.py
tests/scripts/: das-test-data-env.txt  das-test-data-env.yml  fix_prep_csv_paths.py  generate_das_test_data.py  generate_data_for_tests.py  move_csv.py  stft-kernels-environment.yml
tests/setup_scripts/: Makefile_config.ini  clean.py  prep_learncurve_config.ini  prep_learncurve_config.toml  prep_predict_config.ini  prep_predict_config.toml  prep_train_config.ini  remake_results.py  remake_spects.py  rerun_learncurve.py  rerun_prep.py  setup_eval_audio_cbin_annot_notmat.toml  setup_learncurve_audio_cbin_annot_notmat.toml  setup_learncurve_config.toml  setup_predict_audio_cbin_annot_notmat.toml  setup_predict_config.toml  setup_train_audio_wav_annot_koumura.toml  setup_train_config.toml  test_data_generate.py  tmp_Makefile_config.ini
tests/test_cli/: cli_asserts.py  test_cli.py  test_eval.py  test_learncurve.py  test_predict.py  test_prep.py  test_train.py
tests/test_common/: test_annotation.py  test_converters.py  test_labels.py  test_paths.py  test_tensorboard.py  test_timebins.py  test_timenow.py  test_validators.py
tests/test_config/: __init__.py  attr_helpers.py  test_config.py  test_dataset.py  test_eval.py  test_generate.py  test_learncurve.py  test_load.py  test_model.py  test_parse.py  test_predict.py  test_prep.py  test_spect_params.py  test_train.py  test_trainer.py  test_validators.py
tests/test_core/: test_eval.py  test_learncurve.py  test_predict.py  test_prep.py  test_train.py  test_train_dur_csv_paths.py
tests/test_data/: targz_for_figshare.sh
tests/test_datasets/: conftest.py  test_biosoundsegbench.py  test_cmacbench.py  test_get.py  test_metadata.py
tests/test_eval/: test_eval.py  test_frame_classification.py  test_parametric_umap.py
(+947 files in other folders)
