[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vak"
description = "A neural network framework for researchers studying acoustic communication"
version = "1.0.3"
authors = [
    {name = "David Nicholson", email = "nickledave@users.noreply.github.com"}
]
classifiers = [
        'License :: OSI Approved :: BSD License',
        'Development Status :: 5 - Production/Stable',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Programming Language :: Python :: Implementation :: CPython'
]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "attrs >=25.3.0",
    "crowsetta >=5.1.1",
    "dask[dataframe] >=2025.5.1",
    "evfuncs >=0.3.4",
    "joblib >=1.5.1",
    "lightning >=2.2.4",
    "matplotlib >=3.9.0",
    "numpy >=1.26.0",
    "pynndescent >=0.5.13",
    "scipy >=1.12.0",
    "SoundFile >=0.13.1",
    "pandas >=2.1.0",
    "tensorboard >=2.8.0",
    "tomlkit >=0.12.4",
    "torch >= 2.7.0",
    "torchvision >=0.22.1",
    "tqdm >=4.67.1",
    "umap-learn >=0.5.9",
]

[project.optional-dependencies]
dev = [
    "twine >=3.3.0",
    "black >=23.7.0",
    "flake8 >=6.0.0",
    "ipython >=7.0",
    "isort >=5.12.0",
    "pycln >=2.1.3",
]
test = [
    "pytest >=6.2.1",
    "pytest-cov >=2.11.1",
]
doc = [
    "furo >=2022.1.2",
    "myst-parser >=0.17.0",
    "sphinx >=3.4.1",
    "sphinxext-opengraph >=0.5.1",
    "sphinx-autobuild >=2021.3.14",
    "sphinx-copybutton >=0.4.0",
    "sphinx-tabs >=3.4.1",
]

[project.urls]
Source = "https://github.com/vocalpy/vak"
Documentation = "https://vak.readthedocs.io"

[project.scripts]
vak = 'vak.__main__:main'

[tool.flit.sdist]
exclude = [
    "tests/data_for_tests"
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore:::torch.utils.tensorboard",
    'ignore:Deprecated call to `pkg_resources.declare_namespace',
    'ignore:pkg_resources is deprecated as an API',
    'ignore:Implementing implicit namespace packages',
    'ignore:distutils Version classes are deprecated.',
]
